@@ -82,19 +82,45 @@ void create_set(void* p0, void* p1, void* p2, void* p3, void* p4, void* p5, void
         (void*) &m, (void*) &mc, (void*) &ms, (void*) &d, (void*) &dc, (void*) &ds,
         (void*) NUMBER_0_INTEGER_MEMORY_MODEL, p9, p10);
 
-    // Decode part name.
-    decode((void*) &n, (void*) nc, (void*) ns, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, p5, p6, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, p3, p4);
+/*??
+    fwprintf(stdout, L"TEST creating pre na: %ls\n", (wchar_t*) p3);
+    fwprintf(stdout, L"TEST creating pre nac: %i\n", *((int*) p4));
+    fwprintf(stdout, L"TEST creating pre nm: %ls\n", (wchar_t*) p5);
+    fwprintf(stdout, L"TEST creating pre nmc: %i\n", *((int*) p6));
+*/
+    // Copy part name.
+    // CAUTION! The abstraction arriving here has already been converted
+    // from a cybol- to a cyboi abstraction, e.g. "text/plain" into "wide_character".
+    // Therefore, decoding is not needed here.
+    set((void*) &n, nc, ns, p5, p6, (void*) NUMBER_0_INTEGER_MEMORY_MODEL, p3, p4);
+/*??
+    fwprintf(stdout, L"TEST creating post nm: %ls\n", (wchar_t*) n);
+    fwprintf(stdout, L"TEST creating post nmc: %i\n", nc);
+*/
 
-    // Decode part abstraction.
-    decode((void*) &a, (void*) ac, (void*) as, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, p9, p10, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, p7, p8);
+/*??
+    fwprintf(stdout, L"TEST creating pre aa: %ls\n", (wchar_t*) p7);
+    fwprintf(stdout, L"TEST creating pre aac: %i\n", *((int*) p8));
+    fwprintf(stdout, L"TEST creating pre am: %ls\n", (wchar_t*) p9);
+    fwprintf(stdout, L"TEST creating pre amc: %i\n", *((int*) p10));
+*/
+    // Copy part abstraction.
+    // CAUTION! The abstraction arriving here has already been converted
+    // from a cybol- to a cyboi abstraction, e.g. "text/plain" into "wide_character".
+    // Therefore, decoding is not needed here.
+    set((void*) &a, ac, as, p9, p10, (void*) NUMBER_0_INTEGER_MEMORY_MODEL, p7, p8);
+/*??
+    fwprintf(stdout, L"TEST creating post am: %ls\n", (wchar_t*) a);
+    fwprintf(stdout, L"TEST creating post amc: %i\n", ac);
+*/
 
     //
-    // CAUTION! Do NOT decode part model here!
+    // CAUTION! Do NOT consider part model here!
     // This function's purpose is only to allocate an empty part.
     // The part model may get filled with data in the "decode" operation,
     // which is called when a "receive" logic operation is found in cybol.
     //
-    // CAUTION! Do NOT decode part details here!
+    // CAUTION! Do NOT consider part details here!
     // This function's purpose is only to allocate an empty part.
     // The part details are left empty.
     //
@@ -102,37 +128,6 @@ void create_set(void* p0, void* p1, void* p2, void* p3, void* p4, void* p5, void
     // Add part to whole model.
     // CAUTION! Hand over name as reference.
     append_compound_element_by_name(p0, p1, p2, (void*) &n, nc, ns, a, ac, as, m, mc, ms, d, dc, ds);
-
-//?? TEST BEGIN
-    // The model diagram.
-    void* md = *NULL_POINTER_MEMORY_MODEL;
-    int mdc = *NUMBER_0_INTEGER_MEMORY_MODEL;
-    int mds = *NUMBER_0_INTEGER_MEMORY_MODEL;
-    // Allocate model diagram.
-    allocate((void*) &md, (void*) &mds, (void*) WIDE_CHARACTER_MEMORY_ABSTRACTION, (void*) WIDE_CHARACTER_MEMORY_ABSTRACTION_COUNT);
-    // Encode model into model diagram.
-    encode_model_diagram((void*) &md, (void*) &mdc, (void*) &mds,
-        *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, (void*) COMPOUND_MEMORY_ABSTRACTION, (void*) COMPOUND_MEMORY_ABSTRACTION_COUNT,
-        p0, p1, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL);
-    // The multibyte character stream.
-    void* mb = *NULL_POINTER_MEMORY_MODEL;
-    int mbc = *NUMBER_0_INTEGER_MEMORY_MODEL;
-    int mbs = *NUMBER_0_INTEGER_MEMORY_MODEL;
-    // Allocate multibyte character stream.
-    allocate((void*) &mb, (void*) &mbs, (void*) CHARACTER_MEMORY_ABSTRACTION, (void*) CHARACTER_MEMORY_ABSTRACTION_COUNT);
-    // Encode model diagram into multibyte character stream.
-    encode_utf_8_unicode_character_vector((void*) &mb, (void*) &mbc, (void*) &mbs, md, (void*) &mdc);
-    // The file name.
-    void* fn = L"TEST_CREATE.txt";
-    int fnc = *NUMBER_15_INTEGER_MEMORY_MODEL;
-    int fns = *NUMBER_16_INTEGER_MEMORY_MODEL;
-    // Write multibyte character stream as message to file system.
-    send_file((void*) &fn, (void*) &fnc, (void*) &fns, mb, (void*) &mbc);
-    // Deallocate model diagram.
-    deallocate((void*) &md, (void*) &mds, (void*) WIDE_CHARACTER_MEMORY_ABSTRACTION, (void*) WIDE_CHARACTER_MEMORY_ABSTRACTION_COUNT);
-    // Deallocate multibyte character stream.
-    deallocate((void*) &mb, (void*) &mbs, (void*) CHARACTER_MEMORY_ABSTRACTION, (void*) CHARACTER_MEMORY_ABSTRACTION_COUNT);
-//?? TEST END
 }
 
 /**
@@ -251,10 +246,14 @@ void memorise_creating(void* p0, void* p1, void* p2, void* p3, void* p4) {
         (void*) WHOLE_CREATE_MEMORY_OPERATION_CYBOL_NAME, (void*) WHOLE_CREATE_MEMORY_OPERATION_CYBOL_NAME_COUNT,
         p2, p3);
 
+/*??
+    fwprintf(stdout, L"TEST creating param count: %i\n", *((int*) p1));
+
     fwprintf(stdout, L"TEST creating wac: %i\n", *wac);
     fwprintf(stdout, L"TEST creating wa: %ls\n", (wchar_t*) *wa);
     fwprintf(stdout, L"TEST creating wmc: %i\n", *wmc);
     fwprintf(stdout, L"TEST creating wm: %ls\n", (wchar_t*) *wm);
+*/
 
     // The comparison result.
     int r = *NUMBER_0_INTEGER_MEMORY_MODEL;
@@ -265,11 +264,11 @@ void memorise_creating(void* p0, void* p1, void* p2, void* p3, void* p4) {
 
         if (r != *NUMBER_0_INTEGER_MEMORY_MODEL) {
 
-    fwprintf(stdout, L"TEST creating part r: %i\n", r);
+//??    fwprintf(stdout, L"TEST creating part r: %i\n", r);
 
             if (*wm != *NULL_POINTER_MEMORY_MODEL) {
 
-    fwprintf(stdout, L"TEST creating part whole r: %i\n", r);
+//??    fwprintf(stdout, L"TEST creating part whole r: %i\n", r);
 
                 log_terminated_message((void*) DEBUG_LEVEL_LOG_MODEL, (void*) L"Add part knowledge model to whole model.");
 
@@ -278,7 +277,7 @@ void memorise_creating(void* p0, void* p1, void* p2, void* p3, void* p4) {
 
             } else {
 
-    fwprintf(stdout, L"TEST creating part root r: %i\n", r);
+//??    fwprintf(stdout, L"TEST creating part root r: %i\n", r);
 
                 log_terminated_message((void*) DEBUG_LEVEL_LOG_MODEL, (void*) L"Add part knowledge model to knowledge memory root.");
 
@@ -305,7 +304,7 @@ void memorise_creating(void* p0, void* p1, void* p2, void* p3, void* p4) {
 
         if (r != *NUMBER_0_INTEGER_MEMORY_MODEL) {
 
-    fwprintf(stdout, L"TEST creating meta r: %i\n", r);
+//??    fwprintf(stdout, L"TEST creating meta r: %i\n", r);
 
             log_terminated_message((void*) DEBUG_LEVEL_LOG_MODEL, (void*) L"Add meta knowledge model to whole details.");
 
@@ -315,10 +314,41 @@ void memorise_creating(void* p0, void* p1, void* p2, void* p3, void* p4) {
 
     if (r == *NUMBER_0_INTEGER_MEMORY_MODEL) {
 
-    fwprintf(stdout, L"TEST creating empty r: %i\n", r);
+//??    fwprintf(stdout, L"TEST creating empty r: %i\n", r);
 
         log_terminated_message((void*) WARNING_LEVEL_LOG_MODEL, (void*) L"Could not create knowledge model. The element model is unknown.");
     }
+
+//?? TEST BEGIN
+    // The model diagram.
+    void* md = *NULL_POINTER_MEMORY_MODEL;
+    int mdc = *NUMBER_0_INTEGER_MEMORY_MODEL;
+    int mds = *NUMBER_0_INTEGER_MEMORY_MODEL;
+    // Allocate model diagram.
+    allocate((void*) &md, (void*) &mds, (void*) WIDE_CHARACTER_MEMORY_ABSTRACTION, (void*) WIDE_CHARACTER_MEMORY_ABSTRACTION_COUNT);
+    // Encode model into model diagram.
+    encode_model_diagram((void*) &md, (void*) &mdc, (void*) &mds,
+        *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, (void*) COMPOUND_MEMORY_ABSTRACTION, (void*) COMPOUND_MEMORY_ABSTRACTION_COUNT,
+        p2, p3, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL);
+    // The multibyte character stream.
+    void* mb = *NULL_POINTER_MEMORY_MODEL;
+    int mbc = *NUMBER_0_INTEGER_MEMORY_MODEL;
+    int mbs = *NUMBER_0_INTEGER_MEMORY_MODEL;
+    // Allocate multibyte character stream.
+    allocate((void*) &mb, (void*) &mbs, (void*) CHARACTER_MEMORY_ABSTRACTION, (void*) CHARACTER_MEMORY_ABSTRACTION_COUNT);
+    // Encode model diagram into multibyte character stream.
+    encode_utf_8_unicode_character_vector((void*) &mb, (void*) &mbc, (void*) &mbs, md, (void*) &mdc);
+    // The file name.
+    void* fn = L"TEST_CREATING_MEMORISER.txt";
+    int fnc = *NUMBER_27_INTEGER_MEMORY_MODEL;
+    int fns = *NUMBER_28_INTEGER_MEMORY_MODEL;
+    // Write multibyte character stream as message to file system.
+    send_file((void*) &fn, (void*) &fnc, (void*) &fns, mb, (void*) &mbc);
+    // Deallocate model diagram.
+    deallocate((void*) &md, (void*) &mds, (void*) WIDE_CHARACTER_MEMORY_ABSTRACTION, (void*) WIDE_CHARACTER_MEMORY_ABSTRACTION_COUNT);
+    // Deallocate multibyte character stream.
+    deallocate((void*) &mb, (void*) &mbs, (void*) CHARACTER_MEMORY_ABSTRACTION, (void*) CHARACTER_MEMORY_ABSTRACTION_COUNT);
+//?? TEST END
 }
 
 /* CREATING_MEMORISER_SOURCE */
